# zero2prod

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml  shell.nix  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-1cdbb20e2654800271684416f477f41deaf71f037b6c9046e935c2a532ef2758.json  query-6d28b1429fb70ff78818dfc7434c5778cc5ffb8b9f89ca308088e6ceb37fb380.json  query-6e5778439fb3e68723aad752ac4e78014d1bede363db3ba705d683d93c736eb7.json  query-89f450b640fc510bfc4cdaa11e3cb4c335edcd6106e4937aa14dab6b632110b3.json  query-8c65d7d0a462f9fd7861b53ab57161c622ad0d4af9deeb788249495039e7b7b0.json  query-90878d8b1e9477b24970a77505f544aa4b986d23ebc20dad7a7a3228606b4933.json  query-948ca3eb903b51a7269e0124e4f476ef63771e12e4228f89375edcf5261f9f76.json  query-a9433584270fbbe9f912ae1c49fd54c3c20a9e139c429003be0d73313d2eb8b4.json  query-ba0176684ceb384b0b0d917cc010492a515c89a35782a9b0818164e69394ffd5.json  query-bb983f720ca97297bac7f2884af3fd0f3a3c98e1845644b320ca6b47c82dfb9c.json  query-c9af5d8b55d8ba265d251e8328b90cc76a9ee4d1db9423085c366d21bd45f70a.json  query-cebb804cfa8844ba3d8ca2bb65f5fa3321e5303e8892b9987b80258a075301b7.json  query-d64ba02fc43ef03bd8f587df8fb42bc1b64452591f90d802197cb901bf8a2960.json  query-ef66561795f859358bb41461610f30e6647a27156528614cbefe1a1814f01669.json
configuration/: base.yaml  production.yaml
mappings/: email_mock.json
migrations/: 20240618155808_seed_user.sql  20240912181258_add_role_column_to_users_table.sql  20240913202627_create_collabolator_activation_tokens_table.sql  20240917094723_add_new_columns_to_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh  subscribe.sh  subscribe_confirm.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  (+2 more)
tests/: health_check.rs
(+37 files in other folders)
